// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Film item correctly renders with isPlaying false 1`] = `
<article
  className="small-movie-card catalog__movies-card"
>
  <div
    className="small-movie-card__image"
    onMouseOut={[MockFunction]}
    onMouseOver={[Function]}
  >
    <img
      alt="Aviator"
      height="175"
      src="aviator.jpg"
      width="280"
    />
  </div>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="movie-page.html"
      onClick={[Function]}
    >
      Aviator
    </a>
  </h3>
</article>
`;

exports[`Film item correctly renders with isPlaying true 1`] = `
<article
  className="small-movie-card catalog__movies-card"
>
  <div
    className="small-movie-card__image"
    onMouseOut={[MockFunction]}
    onMouseOver={[Function]}
  >
    <video
      className="player__video"
      muted={true}
      src=""
    />
  </div>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="movie-page.html"
      onClick={[Function]}
    >
      Aviator
    </a>
  </h3>
</article>
`;
